Resolved PDS-467 - Core: Fixed support for schema JAR URLs.
git-svn-id: https://starcell.jpl.nasa.gov/repo/2010/trunk@15707 45d5965c-88be-4637-9056-144873d6cd01